<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_bg"
    android:padding="16dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/categoryItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/df_transaction_category"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/typeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/df_transaction_type"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryItem"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/dateItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/df_transaction_date"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeItem"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/amountItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/df_transaction_amount"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <Button
        android:id="@+id/deleteTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateItem" />



</androidx.constraintlayout.widget.ConstraintLayout>
